# YuhHearDem

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLEANUP_SUMMARY.md  CODE_AUDIT.md  Dockerfile  PLAN.md  PRODUCTION_SETUP.md  QUICKSTART.md  README.md  REARCHITECTURE_SUMMARY.md  TRANSCRIPT_EMBEDDINGS_GUIDE.md  TRANSCRIPT_SENTENCES_IMPLEMENTATION.md  USAGE.md  alembic.ini  comment_indexes.py  docker-compose.yml  fix_migration.py  output-schema.json  pyproject.toml  pytest.ini  requirements.txt  test_single_transcribe.py
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  schemas.py
api/routes/: __init__.py  chat.py  search.py  videos.py
app/: __init__.py  config.py  dependencies.py  main.py  middleware.py
core/: __init__.py  config.py  database.py  logging_config.py  utils.py
deploy/: deploy.sh  docker-compose.blue.yml  docker-compose.green.yml  docker-compose.postgres.yml  migrate.sh  nginx.conf  setup.sh
docs/: ARCHITECTURE_ANALYSIS.md  DEPLOYMENT_IMPLEMENTATION.md  DEPLOYMENT_QUICKSTART.md  GITHUB_SECRETS.md  INGESTOR_DESIGN.md  REBUILD_PLAN.md  deployment.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_speaker_canonical_id.py  002_fix_order_paper_video_id_nullable.py  003_add_kg_provenance_fields.py  (+7 more)
models/: __init__.py  agenda_item.py  community.py  entity.py  legislation.py  mention.py  message.py  order_paper.py  relationship.py  relationship_evidence.py  session.py  speaker.py  transcript_segment.py  transcript_sentence.py  vector_embedding.py  video.py
parsers/: __init__.py  models.py  order_paper.py  order_paper_parser.py  transcript_models.py  video_transcript.py
scripts/: README.md  __init__.py  compute_communities.py  compute_graph_metrics.py  daily_pipeline.py  dedupe_entities.py  download_youtube_videos.py  dump_knowledgebase_rdf.py  generate_transcript_embeddings.py  ingest_order_paper.py  ingest_video.py  ingest_video_unified.py  init_database.py  init_db_sync.py  match_videos_to_papers.py  recreate_sessions_table.py  reset_db.py  run_deduplication.py  run_full_ingestion.py  scrape_session_papers.py  setup_prod_db.sh  show_knowledge_graph.py  simple_download_video.py  test_api.py  test_transcribe_video.py
services/: __init__.py  chunked_processor.py  community_detection.py  community_summarizer.py  embeddings.py  entity_deduplication.py  entity_extractor.py  gemini.py  global_search.py  hybrid_graphrag.py  local_search.py  parliamentary_agent.py  parliamentary_agent_tools.py  query_entity_extractor.py  response_styler.py  schemas.py  simplified_agent.py  speaker_matcher.py  speaker_service.py  transcript_models.py  transcript_segmenter.py  unified_ingestion.py  video_paper_matcher.py  video_transcription.py
static/: chat.html  graph.html  index.html
storage/: __init__.py  knowledge_graph_store.py
tests/: __init__.py  conftest.py  factories.py
(+39 files in other folders)
